js/js.translator/testData/incremental/invalidation/removeFile/main/m.new.kt
fun box(): String {
    if (qux0() != 42) return "Fail"
    return "OK"
}
